# copr-manager

./: .gitignore  README.md  copr-manager.sh  meson.build
data/: io.github.gzenit.CoprManager.desktop.in  io.github.gzenit.CoprManager.metainfo.xml  meson.build
src/: copr-manager.in  coprs.js  main.js  meson.build  style.css  window.js
